968 fct driver sets incorrect fc-ct revision Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Eric Schrock <eric.schrock@delphix.com> Reviewed by: Mathieu Simon <mathieu.simon@simweb.ch> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Milan Jurik <milan.jurik@xylab.cz> Reviewed by: Richard Elling <richard.elling@richardelling.com> Approved by: Richard Lowe <richlowe@richlowe.net>